--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <span>Linux</span>
             </div>
             <div class="dowload-buttons">
-                <span class="secondary ">Coming Soon...</span>
+                <span class="secondary ">Coming Soon..</span>
             </div>
         </div>
     </div>
